# code-index

./: .env.example  .gitignore  AGENTS.md  Makefile  PERFORMANCE_IMPROVEMENT.md  README.md  pyproject.toml
docs/: performance-analysis.md  progress-bars.md
docs/insights/: 2025-10-16-performance-optimization.md  2025-10-16-progress-bars.md
index-complyance/: bm25.json  edges.jsonl  meta.json  node_texts.jsonl  nodes.jsonl
src/codeindex/: ast_indexer.py  bm25.py  cli.py  doc_agent.py  indexer.py  llm_search.py  logger.py  nodes.py  searcher.py  store.py  summarizer.py  tokens.py  ts_indexer.py
src/codeindex/arch/: __init__.py  builder.py  diagram.py  diagram_validator.py  docgen.py  flows.py  llm_architect.py  llm_engine.py  structure.py
tests/: test_arch_structure.py  test_enrichment.py  test_openai_connection.py
